// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gabliam instance 1`] = `
{
  "application": {
    "db": "test",
    "host": "127.0.0.1",
  },
}
`;

exports[`gabliam instance 2`] = `
{
  "config": "<PROJECT_ROOT>/packages/core/core/__tests__/fixtures/gabliam/config",
  "scanPath": "<PROJECT_ROOT>/packages/core/core/__tests__/fixtures/gabliam",
}
`;

exports[`gabliam instance 3`] = `
TestService {
  "dbConfig": DbConfig {
    "db": "test",
    "host": "127.0.0.1",
  },
}
`;

exports[`gabliam instance 4`] = `
DbConfig {
  "db": "test",
  "host": "127.0.0.1",
}
`;

exports[`gabliam instance 5`] = `
Registry {
  "registry": Map {
    "ConfigType" => [
      {
        "autoBind": true,
        "id": [Function],
        "options": {
          "order": 150,
        },
        "target": [Function],
      },
    ],
    "ServiceType" => [
      {
        "autoBind": true,
        "id": [Function],
        "options": undefined,
        "target": [Function],
      },
    ],
  },
}
`;

exports[`gabliam instance 6`] = `
Registry {
  "registry": Map {
    "ConfigType" => [
      {
        "autoBind": true,
        "id": [Function],
        "options": {
          "order": 150,
        },
        "target": [Function],
      },
    ],
  },
}
`;

exports[`gabliam instance 7`] = `
Registry {
  "registry": Map {},
}
`;
